--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,11 @@ set(MAKEFLAGS += -s)
 
 #add_subdirectory(general-library)
 add_subdirectory(random-library)
-add_subdirectory(Lezione_01)
-add_subdirectory(Lezione_02)
-add_subdirectory(Lezione_03)
-add_subdirectory(Lezione_04)
-add_subdirectory(Lezione_05)
-add_subdirectory(Lezione_06)
+add_subdirectory(Lesson_01)
+add_subdirectory(Lesson_02)
+add_subdirectory(Lesson_03)
+add_subdirectory(Lesson_04)
+add_subdirectory(Lesson_05)
+add_subdirectory(Lesson_06)
 
 configure_file( ${CMAKE_SOURCE_DIR}/version_config.h.in ${CMAKE_BINARY_DIR}/version_config.h)
