--- a/.gitignore
+++ b/.gitignore
@@ -256,4 +256,4 @@ pyrightconfig.json
 # Personal
 build/
 Dabuttare/
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,cmake,c++,python,jupyternotebooks
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,cmake,c++,python,jupyternotebooksS
