--- a/Lesson_04/CMakeLists.txt
+++ b/Lesson_04/CMakeLists.txt
@@ -4,12 +4,12 @@ target_link_libraries(Exercise_04.1 PRIVATE random-library)
 add_definitions(-D_VAR=\"${CMAKE_SOURCE_DIR}\")
 include_directories(${CMAKE_BINARY_DIR})
 
-configure_file(input/eq/gas/input.gas input/eq/gas/input.gas COPYONLY)
-configure_file(input/eq/liquid/input.liquid input/eq/liquid/input.liquid COPYONLY)
-configure_file(input/eq/solid/input.solid input/eq/solid/input.solid COPYONLY)
+configure_file(input-output/eq/gas/input.gas input-output/eq/gas/input.gas COPYONLY)
+configure_file(input-output/eq/liquid/input.liquid input-output/eq/liquid/input.liquid COPYONLY)
+configure_file(input-output/eq/solid/input.solid input-output/eq/solid/input.solid COPYONLY)
 
-configure_file(input/input.gas input/input.gas COPYONLY)
-configure_file(input/input.liquid input/input.liquid COPYONLY)
-configure_file(input/input.solid input/input.solid COPYONLY)
+configure_file(input-output/input.gas input-output/input.gas COPYONLY)
+configure_file(input-output/input.liquid input-output/input.liquid COPYONLY)
+configure_file(input-output/input.solid input-output/input.solid COPYONLY)
 
-configure_file(input/eq/config.in input/eq/config.in COPYONLY)
+configure_file(input-output/eq/config.in input-output/eq/config.in COPYONLY)
