--- a/Lesson_10/CMakeLists.txt
+++ b/Lesson_10/CMakeLists.txt
@@ -1,5 +1,6 @@
+find_package(MPI REQUIRED)
 add_executable (Exercise_10.1 Exercise_10.1.cpp)
-target_link_libraries(Exercise_10.1 PRIVATE random-library)
+target_link_libraries(Exercise_10.1 PRIVATE random-library MPI::MPI_CXX)
 
 add_definitions(-D_VAR=\"${CMAKE_SOURCE_DIR}\")
 include_directories(${CMAKE_BINARY_DIR})
